Add check for ChronicleMap instantiation fail